# platform.core.connectivity.bluetooth-share

./: CMakeLists.txt  bluetooth-share.efl  bluetooth-share.manifest  bluetooth-share.rule  project.config
bt-share/: CMakeLists.txt
bt-share/include/: applog.h  bt-share-common.h  bt-share-cynara.h  bt-share-ipc.h  bt-share-main.h  bt-share-noti-handler.h  bt-share-notification.h  bt-share-resource.h  bt-share-syspopup.h  obex-event-handler.h
bt-share/src/: bt-share-common.c  bt-share-cynara.c  bt-share-ipc.c  bt-share-main.c  bt-share-noti-handler.c  bt-share-notification.c  bt-share-syspopup.c  obex-event-handler.c  org.bluetooth.share.service
debian/: bluetooth-share-headers.install.in  bluetooth-share.install.in  bluetooth-share.postinst  changelog  control  libbluetooth-share-dev.install.in  rules
lib/: CMakeLists.txt  applog.h  bluetooth-share-api.h  bluetooth-share-api.pc.in  bt-share-db.c  bt-share-db.h
packaging/: bluetooth-share.changes  bluetooth-share.service  bluetooth-share.spec  init_db.sh
