CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(bluetooth-share C)

SET(SRCS src/bt-share-main.c
src/bt-share-notification.c
src/bt-share-common.c
src/obex-event-handler.c
src/bt-share-syspopup.c
src/bt-share-ipc.c
src/bt-share-noti-handler.c
src/bt-share-cynara.c
)


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED glib-2.0 bluetooth-api
				aul dbus-glib-1 appcore-common
				dlog vconf syspopup-caller deviced
				notification sqlite3 ecore-file
				appsvc appcore-efl storage
				capi-content-media-content
				libtzplatform-config eventsystem
				cynara-creds-dbus cynara-client cynara-session
				storage)
pkg_check_modules(CALENDAR_SERVICE2 calendar-service2)
pkg_check_modules(CONTACTS_SERVICE2 contacts-service2)

FOREACH(flag ${pkgs_CFLAGS} ${CALENDAR_SERVICE2_CFLAGS} ${CONTACTS_SERVICE2_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)
#SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -finstrument-functions")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -fPIC -Werror -Wno-deprecated-declarations")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(INCLUDEDIR "/usr/include")
SET(VERSION 1.0)

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
ADD_DEFINITIONS("-DTARGET")
ADD_DEFINITIONS("-DSLP_DEBUG")
if(CALENDAR_SERVICE2_FOUND)
  ADD_DEFINITIONS("-DENABLE_CALENDAR_SERVICE2")
endif(CALENDAR_SERVICE2_FOUND)
if(CONTACTS_SERVICE2_FOUND)
  ADD_DEFINITIONS("-DENABLE_CONTACTS_SERVICE2")
endif(CONTACTS_SERVICE2_FOUND)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS} ${CALENDAR_SERVICE2_LDFLAGS} ${CONTACTS_SERVICE2_LDFLAGS} -L${CMAKE_CURRENT_SOURCE_DIR}/../lib -lbluetooth-share-api)


INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/org.bluetooth.share.service DESTINATION share/dbus-1/system-services)
